<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Module" Id="{dc37cb22-2b59-4e70-80e4-3268cd948482}">
    <Declaration><![CDATA[TYPE ST_Module :
STRUCT
	DumpRly_close	: BOOL;
	
	VoltageFeedback : ARRAY[1..2] OF REAL;
	VoltageFeedback_norm : ARRAY[1..2] OF REAL;
	VoltageFeedback_raw : ARRAY[1..2] OF DINT;
	//VTB : ARRAY[1..2] OF ST_VoltTran_Base;  uncomment this for troubleshooting the bits in VoltageMonitor POU
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>