<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Permissives_DB" Id="{c05a4b99-99cd-4605-96e2-a97127a00965}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//SafetyOK				: BOOL;
	AllChargeRelayClosed 	: BOOL := 0;
	AllDumpRelayOpen		: BOOL := 0;
	//AllDumpRelayClose		: BOOL := 0;
	ReadyToCharge			: BOOL := 0;
	AllChargerEOC			: BOOL := 0;
	
	ChargerVBelowThres		: BOOL := 0;
	ChargerVThres			: REAL := 40;
	AllChargerHVisOFF		: BOOL := 0;
	AllChargerInhibitON		: BOOL := 0;

	AllCapsDischarged		: BOOL := 0;
	CapVoltageThres			: REAL := 40;
	
	AnyLCP1MonBoardLoss		: BOOL := 0;
	AnyLCP1MonBoardBatLo	: BOOL := 0;
	AnyLCP2MonBoardLoss		: BOOL := 0;
	AnyLCP2MonBoardBatLo	: BOOL := 0;
	
	AnyVoltMonBoardLoss		: BOOL := 0;
	AnyVoltMonBoardBatLo	: BOOL := 0;
	AllVoltMonBoardStatusOK : BOOL := 0;
	SystemIsSafe			: BOOL := 0;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>